Revert "Kan 43 binary build"